--- a/cfg/cfg.yml
+++ b/cfg/cfg.yml
@@ -8,8 +8,9 @@ client_secret_file:
   - cfg
   - client_secret
 
-# Address you specified in the callback address in the Spotify dashboard. Using ports other than 443 is not recommended.
-redirect_uri: http://localhost:5000
+# Address Spotify will redirect the user to once the user has Authorized the app.
+# Must be also specified as a redirect URI in the Spotify Dashboard for the app.
+redirect_uri: http://localhost:8000/callback
 
 # If true, the database file will be created if it does not exist, and required tables will be created.
 # If the database file exists, but any tables are missing, the missing tables will be created.
