--- a/cfg/cfg.yml
+++ b/cfg/cfg.yml
@@ -12,6 +12,13 @@ client_secret_file:
 # Must be also specified as a redirect URI in the Spotify Dashboard for the app.
 redirect_uri: https://localhost/callback
 
+# URLs that support Cross-Origin Resource Sharing. If you are creating a website that calls SpotList
+# using Javascript in a browser, the URL that your website is being served from must be included here.
+cors_urls:
+  - https://spotlist.patchyserver.xyz
+  - http://localhost:8000
+  - http://localhost
+
 # If true, the database file will be created if it does not exist, and required tables will be created.
 # If the database file exists, but any tables are missing, the missing tables will be created.
 # Already existing tables will NOT be overridden.
